syntax = "proto3";

package com.metrocarpool.events;

import "google/protobuf/timestamp.proto";

// Optionally define the Java package
option java_multiple_files = true;
option java_package = "com.metrocarpool.contracts.proto";
option java_outer_classname = "DriverRiderMatchEvent";

// The Kafka event definition
message DriverRiderMatchEvent {
  int64 riderId = 1;
  int64 driverId = 2;
  string pickUpStation = 3;
  google.protobuf.Timestamp driverArrivalTime = 4;
}